--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
     "autoprefixer": "10.4.14",
     "axios": "^1.3.5",
     "bcrypt": "^5.1.0",
+    "date-fns": "^2.29.3",
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
     "i": "^0.3.7",
     "leaflet": "^1.9.3",
     "next": "13.3.0",
     "next-auth": "^4.22.0",
+    "next-cloudinary": "^4.4.0",
     "npm": "^9.6.4",
     "postcss": "8.4.21",
     "query-string": "^8.1.0",
